After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760334 - get_system_type() returns amd64-freebsd on FreeBSD, which is not accepted by autoconf
get_system_type() returns amd64-freebsd on FreeBSD, which is not accepted by ...
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: libide
unspecified
Other FreeBSD
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-08 20:05 UTC by Ting-Wei Lan
Modified: 2016-01-09 13:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libide: Replace amd64 with x86_64 when constructing host system type (1.72 KB, patch)
2016-01-09 10:09 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2016-01-08 20:05:16 UTC
This can be reproduced with a simple configure.ac and a empty Makefile.am:
AC_INIT([testpkg], [1.23])
AC_CONFIG_SRCDIR([configure.ac])
AM_INIT_AUTOMAKE([foreign])
AC_CANONICAL_HOST
AC_CANONICAL_BUILD
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

$ ./configure --host=x86_64-freebsd
[OK]

$ ./configure --host=x86_64-unknown-freebsd
[OK]

$ ./configure --host=amd64-freebsd
Invalid configuration `amd64-freebsd': machine `amd64' not recognized

$ ./configure --host=amd64-unknown-freebsd
[OK]


Should we replace 'amd64' with 'x86_64', or add '-pc' or '-unknown'?
Comment 1 Christian Hergert 2016-01-09 05:21:36 UTC
Hrmm, you probably know vastly more about compiling autotools projects on FreeBSD, so I'm willing to take suggestions.

However, my inclination is to translate amd64 to x86_64.
Comment 2 Ting-Wei Lan 2016-01-09 10:09:25 UTC
Created attachment 318574 [details] [review]
libide: Replace amd64 with x86_64 when constructing host system type

FreeBSD uname returns amd64 instead of x86_64, which is not accepted
by autoconf config.sub without specifying the vendor.
Comment 3 Christian Hergert 2016-01-09 13:19:56 UTC
Review of attachment 318574 [details] [review]:

LGTM
Comment 4 Ting-Wei Lan 2016-01-09 13:48:30 UTC
Attachment 318574 [details] pushed as 04b572c - libide: Replace amd64 with x86_64 when constructing host system type