libide: Replace amd64 with x86_64 when constructing host system type

FreeBSD uname returns amd64 instead of x86_64, which is not accepted
by autoconf config.sub without specifying the vendor.

https://bugzilla.gnome.org/show_bug.cgi?id=760334